--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-dropdown-select-list": "^1.0.18",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-navigation-stack": "^2.10.4",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
