--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.8",
     "@react-native-firebase/app": "^15.2.0",
     "@react-native-firebase/database": "^15.2.0",
     "@react-native-picker/picker": "^2.4.2",
